--- a/templates/Analysis2.html
+++ b/templates/Analysis2.html
@@ -271,9 +271,9 @@
 
 <body>
     <nav class="main">
-        <label class="logo" href="{{url_for('templates',filename='index.html')}}" style="margin-left:0;">Crime Hotspots Prediction & Analysis</label>
+        <label class="logo" href="{{url_for('index')}}" style="margin-left:0;">Crime Hotspots Prediction & Analysis</label>
         <ul>
-            <li><a href="{{url_for('templates',filename='index.html')}}">Home</a></li>
+            <li><a href="{{url_for('index')}}">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Feedback</a></li>
