--- a/templates/Analysis3(maps).html
+++ b/templates/Analysis3(maps).html
@@ -33,7 +33,7 @@
         const crimeval = crime.value;
 
 
-        if (yearval == "2014" && crimeval == "Curroption")
+        if (yearval == "2014" && crimeval == "Corruption")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2014/2014_Corruption.html';
         if (yearval == "2014" && crimeval == "Crimes Against Children")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2014/2014_Crimes_Against_Children.html';
@@ -41,7 +41,7 @@
             document.getElementById('iframeID3').src = 'plots/Choropleth/2014/2014_Crimes_Against_Senior_Citizen.html';
         if (yearval == "2014" && crimeval == "Crimes Against Women")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2014/2014_Crimes_Against_Women.html';
-        if (yearval == "2014" && crimeval == "Cyber Crimes")
+        if (yearval == "2014" && crimeval == "Cyber Crime")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2014/2014_Cyber_Crime.html';
         if (yearval == "2014" && crimeval == "Kidnapping")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2014/2014_Kidnapping.html';
@@ -52,7 +52,7 @@
 
         //---...for 2015---->
 
-        if (yearval == "2015" && crimeval == "Curroption")
+        if (yearval == "2015" && crimeval == "Corruption")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2015/2015_Corruption.html';
         if (yearval == "2015" && crimeval == "Crimes Against Children")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2015/2015_Crimes_Against_Children.html';
@@ -60,7 +60,7 @@
             document.getElementById('iframeID3').src = 'plots/Choropleth/2015/2015_Crimes_Against_Senior_Citizen.html';
         if (yearval == "2015" && crimeval == "Crimes Against Women")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2015/2015_Crimes_Against_Women.html';
-        if (yearval == "2015" && crimeval == "Cyber Crimes")
+        if (yearval == "2015" && crimeval == "Cyber Crime")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2015/2015_Cyber_Crime.html';
         if (yearval == "2015" && crimeval == "Kidnapping")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2015/2015_Kidnapping.html';
@@ -68,7 +68,7 @@
             document.getElementById('iframeID3').src = 'plots/Choropleth/2015/2015_Murders.html';
         if (yearval == "2015" && crimeval == "Total Crimes")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2015/2015_Total_Crimes.html';
-        if (yearval == "2016" && crimeval == "Curroption")
+        if (yearval == "2016" && crimeval == "Corruption")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2016/2016_Corruption.html';
         if (yearval == "2016" && crimeval == "Crimes Against Children")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2016/2016_Crimes_Against_Children.html';
@@ -76,7 +76,7 @@
             document.getElementById('iframeID3').src = 'plots/Choropleth/2016/2016_Crimes_Against_Senior_Citizen.html';
         if (yearval == "2016" && crimeval == "Crimes Against Women")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2016/2016_Crimes_Against_Women.html';
-        if (yearval == "2016" && crimeval == "Cyber Crimes")
+        if (yearval == "2016" && crimeval == "Cyber Crime")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2016/2016_Cyber_Crime.html';
         if (yearval == "2016" && crimeval == "Kidnapping")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2016/2016_Kidnapping.html';
@@ -84,7 +84,7 @@
             document.getElementById('iframeID3').src = 'plots/Choropleth/2016/2016_Murders.html';
         if (yearval == "2016" && crimeval == "Total Crimes")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2016/2016_Total_Crimes.html';
-        if (yearval == "2017" && crimeval == "Curroption")
+        if (yearval == "2017" && crimeval == "Corruption")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2017/2017_Corruption.html';
         if (yearval == "2017" && crimeval == "Crimes Against Children")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2017/2017_Crimes_Against_Children.html';
@@ -92,7 +92,7 @@
             document.getElementById('iframeID3').src = 'plots/Choropleth/2017/2017_Crimes_Against_Senior_Citizen.html';
         if (yearval == "2017" && crimeval == "Crimes Against Women")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2017/2017_Crimes_Against_Women.html';
-        if (yearval == "2017" && crimeval == "Cyber Crimes")
+        if (yearval == "2017" && crimeval == "Cyber Crime")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2017/2017_Cyber_Crime.html';
         if (yearval == "2017" && crimeval == "Kidnapping")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2017/2017_Kidnapping.html';
@@ -100,7 +100,7 @@
             document.getElementById('iframeID3').src = 'plots/Choropleth/2017/2017_Murders.html';
         if (yearval == "2017" && crimeval == "Total Crimes")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2017/2017_Total_Crimes.html';
-        if (yearval == "2018" && crimeval == "Curroption")
+        if (yearval == "2018" && crimeval == "Corruption")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2018/2018_Corruption.html';
         if (yearval == "2018" && crimeval == "Crimes Against Children")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2018/2018_Crimes_Against_Children.html';
@@ -108,7 +108,7 @@
             document.getElementById('iframeID3').src = 'plots/Choropleth/2018/2018_Crimes_Against_Senior_Citizen.html';
         if (yearval == "2018" && crimeval == "Crimes Against Women")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2018/2018_Crimes_Against_Women.html';
-        if (yearval == "2018" && crimeval == "Cyber Crimes")
+        if (yearval == "2018" && crimeval == "Cyber Crime")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2018/2018_Cyber_Crime.html';
         if (yearval == "2018" && crimeval == "Kidnapping")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2014/2014_Kidnapping.html';
@@ -117,7 +117,7 @@
         if (yearval == "2018" && crimeval == "Total Crimes")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2018/2018_Total_Crimes.html';
 
-        if (yearval == "2019" && crimeval == "Curroption")
+        if (yearval == "2019" && crimeval == "Corruption")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2019/2019_Corruption.html';
         if (yearval == "2019" && crimeval == "Crimes Against Children")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2019/2019_Crimes_Against_Children.html';
@@ -125,7 +125,7 @@
             document.getElementById('iframeID3').src = 'plots/Choropleth/2019/2019_Crimes_Against_Senior_Citizen.html';
         if (yearval == "2019" && crimeval == "Crimes Against Women")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2019/2019_Crimes_Against_Women.html';
-        if (yearval == "2019" && crimeval == "Cyber Crimes")
+        if (yearval == "2019" && crimeval == "Cyber Crime")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2019/2019_Cyber_Crime.html';
         if (yearval == "2019" && crimeval == "Kidnapping")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2019/2019_Kidnapping.html';
@@ -133,7 +133,7 @@
             document.getElementById('iframeID3').src = 'plots/Choropleth/2019/2019_Murders.html';
         if (yearval == "2019" && crimeval == "Total Crimes")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2019/2019_Total_Crimes.html';
-        if (yearval == "2020" && crimeval == "Curroption")
+        if (yearval == "2020" && crimeval == "Corruption")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2020/2020_Corruption.html';
         if (yearval == "2020" && crimeval == "Crimes Against Children")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2020/2020_Crimes_Against_Children.html';
@@ -141,7 +141,7 @@
             document.getElementById('iframeID3').src = 'plots/Choropleth/2020/2020_Crimes_Against_Senior_Citizen.html';
         if (yearval == "2020" && crimeval == "Crimes Against Women")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2020/2020_Crimes_Against_Women.html';
-        if (yearval == "2020" && crimeval == "Cyber Crimes")
+        if (yearval == "2020" && crimeval == "Cyber Crime")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2020/2020_Cyber_Crime.html';
         if (yearval == "2020" && crimeval == "Kidnapping")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2020/2020_Kidnapping.html';
@@ -149,7 +149,7 @@
             document.getElementById('iframeID3').src = 'plots/Choropleth/2020/2020_Murders.html';
         if (yearval == "2020" && crimeval == "Total Crimes")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2020/2020_Total_Crimes.html';
-        if (yearval == "2021" && crimeval == "Curroption")
+        if (yearval == "2021" && crimeval == "Corruption")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2021/2021_Corruption.html';
         if (yearval == "2021" && crimeval == "Crimes Against Children")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2021/2021_Crimes_Against_Children.html';
@@ -157,7 +157,7 @@
             document.getElementById('iframeID3').src = 'plots/Choropleth/2021/2021_Crimes_Against_Senior_Citizen.html';
         if (yearval == "2021" && crimeval == "Crimes Against Women")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2021/2021_Crimes_Against_Women.html';
-        if (yearval == "2021" && crimeval == "Cyber Crimes")
+        if (yearval == "2021" && crimeval == "Cyber Crime")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2021/2021_Cyber_Crime.html';
         if (yearval == "2021" && crimeval == "Kidnapping")
             document.getElementById('iframeID3').src = 'plots/Choropleth/2021/2021_Kidnapping.html';
@@ -175,21 +175,21 @@
         let crimeval = crime.value;
         crimeval = crimeval.replaceAll(" ", "_");
         if (yearval == "disabled selected" && crimeval == "disabled_selected") {
-            const string = "plots/Geopandas/2021/2021Total_Crimes_State_wise.png";
+            const string = "{{url_for('static',filename='plots/Geopandas/2021/2021Total_Crimes_State_wise.png')}}";
             document.getElementById('iframeID3').src = string;
             const timeout = setTimeout(function myfunction() {
                 alert(" Please select a crime and year");
             }, 5000);
         } else if (yearval == "disabled selected") {
-            const string = "plots/Geopandas/2021/2021" + crimeval + "_State_wise.png";
+            const string = "{{url_for('static',filename='plots/Geopandas/2021/2021" + crimeval + "_State_wise.png')}}";
             document.getElementById('iframeID3').src = string;
             const timeout = setTimeout(functionalert("please select a year"), 30000);
         } else if (crimeval == "disabled selected") {
-            const string = "plots/Geopandas/2021/2021/Total_Crimes_State_wise.png";
+            const string = "{{url_for('static',filename='plots/Geopandas/2021/2021Total_Crimes_State_wise.png')}}";
             document.getElementById('iframeID3').src = string;
             const timeout = setTimeout(alert("please select a Crime"), 30000);
         } else {
-            const string = "plots/Geopandas/" + yearval + "/" + yearval + crimeval + "_State_wise.png";
+            const string = "{{url_for('static',filename='plots/Geopandas/" + yearval + "/" + yearval + crimeval + "_State_wise.png')}}";
             document.getElementById('iframeID3').src = string;
         }
 
@@ -202,9 +202,9 @@
 
 <body>
     <nav class="main">
-        <label class="logo" href="{{url_for('templates',filename='index.html')}}" style="margin-left:0;">Crime Hotspots Prediction & Analysis</label>
+        <label class="logo" href="{{url_for('index')}}" style="margin-left:0;">Crime Hotspots Prediction & Analysis</label>
         <ul>
-            <li><a href="{{url_for('templates',filename='index.html')}}">Home</a></li>
+            <li><a href="{{url_for('index')}}">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Feedback</a></li>
