--- a/templates/datadisplay.html
+++ b/templates/datadisplay.html
@@ -21,10 +21,10 @@
 
 <body>
     <nav class="main">
-        <label style="margin-left:0px;" class="logo" href="{{url_for('templates',filename='index.html')}}">Crime Hotspots Prediction & Analysis</label>
+        <label style="margin-left:0px;" class="logo" href="{{url_for('index')}}">Crime Hotspots Prediction & Analysis</label>
         <ul>
             <li>
-                <a href="{{url_for('templates',filename='index.html')}}"></a>Home</a>
+                <a href="{{url_for('index')}}"></a>Home</a>
             </li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
