--- a/templates/index.html
+++ b/templates/index.html
@@ -21,10 +21,10 @@
 
 <body>
     <nav class="main">
-        <label class="logo" href="index.html">Crime Hotspots Prediction & Analysis</label>
+        <label class="logo" href="{{url_for('index')}}">Crime Hotspots Prediction & Analysis</label>
         <ul>
             <li>
-                <a href='index.html'>Home</a>
+                <a href="{{url_for('index')}}">Home</a>
             </li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
@@ -45,8 +45,8 @@
                     </svg>
                     </a>
                     <div class="dd-content">
-                        <a href="{{url_for('static',filename='templates/K-means.html')}}">K-Means</a>
-                        <a href="{{url_for('static',filename='templates/K-Prottype-Clustering.html')}}">K-Prototype</a>
+                        <a href="{{url_for('Kmeans')}}">K-Means</a>
+                        <a href="{{url_for('Kproto')}}">K-Prototype</a>
 
                     </div>
                   </button>
@@ -63,7 +63,7 @@
                 </svg>
               </a>
               <div class="dd-content">
-                       <a href="{{url_for('static ',filename='templates/Randomforestclassifier.html')}}"> Random Forest Classifier</a> 
+                       <a href="{{url_for('Randomfrstcls')}}"> Random Forest Classifier</a> 
               </div>
               </button>
                     </div>
@@ -71,7 +71,7 @@
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Linear Regression</h2>
                     <p class="leading-relaxed text-base mb-4">using Linear Regression for Prediction</p>
-                    <button class=button><a class="text-blue-500 inline-flex items-center" href="{{url_for('static',filename='templates/linear-regression.html')}}">Try Now  
+                    <button class=button><a class="text-blue-500 inline-flex items-center" href="{{url_for('LinearReg')}}">Try Now  
                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                  <path d="M5 12h14M12 5l7 7-7 7"></path></svg>
                   </button>
@@ -97,8 +97,8 @@
                 </svg>
               </a>
               <div class="dd-content">
-                <a href="{{url_for('static',filename='templates/Analysis.html')}}">Graphs</a>
-                <a href="{{url_for('static',filename='templates/Analysis2.html')}}"> Maps</a>
+                <a href="{{url_for('analysis')}}">Graphs</a>
+                <a href="{{url_for('analysis2')}}"> Maps</a>
                
               </div>
             
@@ -111,7 +111,7 @@
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Data</h2>
                     <p class="leading-relaxed text-base mb-4">Check out the multiple datasets that were used for in this project</p>
-                    <button class=button><a class="text-blue-500 inline-flex items-center" href="{{url_for('static',filename='templates/datadisplay.html')}}">Try Now  
+                    <button class=button><a class="text-blue-500 inline-flex items-center" href="{{url_for('datadisp')}}">Try Now  
                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                  <path d="M5 12h14M12 5l7 7-7 7"></path></svg>
                   </button>
@@ -126,7 +126,7 @@
                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                <path d="M5 12h14M12 5l7 7-7 7"></path></svg>
                <div class="dd-content">
-                <a href="{{url_for('static',filename='templates/Analysis3(maps).html')}}">Maps</a>
+                <a href="{{url_for('analysis3')}}">Maps</a>
 
                </div>
                 </button>
