--- a/templates/Analysis.html
+++ b/templates/Analysis.html
@@ -99,12 +99,12 @@
 
 <body>
     <nav class="main">
-        <label class="logo" href="{{url_for('templates',filename='index.html')}}">Crime Hotspots Prediction & Analysis</label>
+        <label class="logo" href="{{url_for('index')}}">Crime Hotspots Prediction & Analysis</label>
         <ul>
-            <li><a href="{{url_for('templates',filename='index.html')}}">Home</a></li>
-            <li><a href="{{url_for('templates',filename='about.html')}}">About</a></li>
-            <li><a href="{{url_for('templates',filename='contact.html')}}">Contact</a></li>
-            <li><a href="{{url_for('templates',filename='feedback.html')}}">Feedback</a></li>
+            <li><a href="{{url_for('index')}}">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Feedback</a></li>
         </ul>
     </nav>
     <nav class="secondnav">
