--- a/templates/RandomForestClassifer.html
+++ b/templates/RandomForestClassifer.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{{url_for('static',filename='stylesheets/graphanalysis.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='stylesheets/K-means.css')}}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-    <script src="linearregression.js"></script>
+    <script src="{{url_for('static',filename='javascript/linearregression.js')}}"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
     <script src="http://www.skulpt.org/js/skulpt.min.js" type="text/javascript"></script>
     <script src="http://www.skulpt.org/js/skulpt-stdlib.js" type="text/javascript"></script>
@@ -41,12 +41,12 @@
 
 <body onload="tablefilling(1);">
     <nav class="main" style="width: 100%;">
-        <label style="margin-left:0px;" class="logo" href="{{url_for('templates',filename='index.html')}}">Crime Hotspots Prediction & Analysis</label>
+        <label style="margin-left:0px;" class="logo" href="{{url_for('index')}}">Crime Hotspots Prediction & Analysis</label>
         <ul>
-            <li><a href="{{url_for('templates',filename='index.html')}}">Home</a></li>
-            <li><a href="{{url_for('templates',filename='about.html')}}">About</a></li>
-            <li><a href="{{url_for('templates',filename='contact.html')}}">Contact</a></li>
-            <li><a href="{{url_for('templates',filename='feedback.html')}}">Feedback</a></li>
+            <li><a href="{{url_for('index')}}">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Feedback</a></li>
         </ul>
         <nav class="secondnav">
             <label class="log" href="#"> RANDOM FOREST CLASSIFER</label>
@@ -61,8 +61,8 @@
 
 
 
-        <img src="{{url_for('static/images',filename='kmeans_elb.png')}}" style=" border-radius:10px;border: 1px solid black; ">
-        <img src="{{url_for('static/images',filename='kmeans_clusters.png')}}" style=" border-radius:10px; height: 200px; width:300px;border: 1px solid black;">
+        <img src="{{url_for('static',filename='images/kmeans_elb.png')}}" style=" border-radius:10px;border: 1px solid black; ">
+        <img src="{{url_for('static',filename='images/kmeans_clusters.png')}}" style=" border-radius:10px; height: 200px; width:300px;border: 1px solid black;">
 
     </div>
     <div style="clear:both;">
@@ -73,7 +73,7 @@
             <label class="log" href="#"> PREDICTION:</label>
         </nav>
 
-        <form action="{{url_for('KMeansclu')}}" method="post">
+        <form action="{{url_for('randomfrstcls')}}" method="post">
             <div class="selects" style="display:inline-block; margin-top: 25px; margin-left:100px; display:flex; justify-content: center; align-items: center;" col-md-4>
                 <div class="for-select" style="margin-left:30px;">
                     <label for="state_input">State:</label>
@@ -141,8 +141,9 @@
         </form>
         <br>
 
-        <div id="prediction-input" style="margin-left:43%; margin-top: 25px; margin-bottom: 60px; display:none;">
-            <label>Prediction:</label>{{ prediction_text }}
+        <div style="margin-left:40%; margin-top: 25px; margin-bottom: 60px; ">
+            <label for="prediction-input">Prediction:</label>
+            <p>{{ prediction_text }} </p>
         </div>
     </div>
     </section>
