--- a/templates/linear-regression.html
+++ b/templates/linear-regression.html
@@ -7,11 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LINEAR REGRESSION</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="graphanalysis.css">
-    <link rel="stylesheet" href="K-means.css">
+    <link rel="stylesheet" href="{{url_for('static',filename='stylesheets/style.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='stylesheets/graphanalysis.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='stylesheets/K-means.css')}}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-    <script src="linearregression.js"></script>
+    <script src="{{url_for('static',filename='javascript/linearregression.js')}}"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
     <script src="http://www.skulpt.org/js/skulpt.min.js" type="text/javascript"></script>
     <script src="http://www.skulpt.org/js/skulpt-stdlib.js" type="text/javascript"></script>
@@ -42,10 +42,10 @@
     <nav class="main" style="width: 100%;">
         <label style="margin-left:0px;" class="logo" href="#sectionId">Crime Hotspots Prediction & Analysis</label>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="feedback.html">Feedback</a></li>
+            <li><a href="{{url_for('index')}}">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Feedback</a></li>
         </ul>
         <nav class="secondnav">
             <label class="log" href="#"> LINEAR REGRESSION</label>
@@ -60,8 +60,8 @@
 
 
 
-        <img src="static/images/kmeans_elb.png" style=" border-radius:10px;border: 1px solid black; ">
-        <img src="static/images/kmeans_clusters.png" style=" border-radius:10px; height: 200px; width:300px;border: 1px solid black;">
+        <img src="{{url_for('static',filename='images/kmeans_elb.png')}}" style=" border-radius:10px;border: 1px solid black; ">
+        <img src="{{url_for('static',filename='images/kmeans_clusters.png')}}" style=" border-radius:10px; height: 200px; width:300px;border: 1px solid black;">
 
     </div>
     <div style="clear:both;">
@@ -72,7 +72,7 @@
             <label class="log" href="#"> PREDICTION:</label>
         </nav>
 
-        <form action="{{url_for('KMeansclu')}}" method="post">
+        <form action="{{url_for('linearreg')}}" method="post">
             <h2 style="margin:auto; width:20%; margin-top:20px; margin-bottom:20px;"> Enter the Following Details</h2>
             <div class="input-container;" style="align-items:center; display:flex; flex-wrap:wrap; justify-content: center; height:100%">
                 <div class="form-input">
@@ -100,8 +100,9 @@
         </form>
         <br>
 
-        <div id="prediction-input" style="margin-left:43%; margin-top: 25px; margin-bottom: 60px; display:none;">
-            <label>Prediction:</label>{{ prediction_text }}
+        <div style="margin-left:40%; margin-top: 25px; margin-bottom: 60px; ">
+            <label for="prediction-input">Prediction:</label>
+            <p>{{ prediction_text }} </p>
         </div>
     </div>
     </section>
