--- a/templates/total-ipc-forecasting.html
+++ b/templates/total-ipc-forecasting.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{{url_for('static',filename='stylesheets/graphanalysis.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='stylesheets/K-means.css')}}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-    <script src="linearregression.js"></script>
+    <script src="{{url_for('static',filename='javascript/linearregression.js')}}"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
     <script src="http://www.skulpt.org/js/skulpt.min.js" type="text/javascript"></script>
     <script src="http://www.skulpt.org/js/skulpt-stdlib.js" type="text/javascript"></script>
@@ -43,9 +43,9 @@
         <label style="margin-left:0px;" class="logo" href="{{url_for('index')}}">Crime Hotspots Prediction & Analysis</label>
         <ul>
             <li><a href="{{url_for('index')}}">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="feedback.html">Feedback</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Feedback</a></li>
         </ul>
         <nav class="secondnav">
             <label class="log" href="#"> TIME SERIES FORECASTING(TOTAL IPC)</label>
